# living-docs

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  index.html
src/: config.rs  main.rs  scanner.rs
src/cli/: analyze.rs  check.rs  explain.rs  init.rs  mod.rs  review.rs  sync.rs  update.rs  watch.rs
src/docs/: frontmatter.rs  managed_blocks.rs  manifest.rs  mod.rs  slug.rs  sync.rs  writer.rs
src/docs/templates/: apis.rs  architecture.rs  component.rs  dependencies.rs  diagrams.rs  index.rs  mod.rs  overview.rs
src/drift/: findings.rs  mod.rs
src/drift/rules/: diagram_node_gone.rs  gone_symbol.rs  managed_block_edited.rs  missing_entity.rs  mod.rs  removed_route.rs  unknown_dependency.rs
src/graph/: build.rs  db.rs  mod.rs  queries.rs  schema.sql
src/graph/extractors/: express.rs  mod.rs
src/parser/: mod.rs  typescript.rs
src/synthesis/: cache.rs  mod.rs  openai.rs  prompts.rs  provider.rs
src/util/: exit.rs  hash.rs  log.rs  mod.rs
tests/: analyze.rs  check.rs
tests/fixtures/basic-ts/: livingdocs.config.json
tests/fixtures/basic-ts/src/: index.js  policy-service.ts  user-service.ts
tests/fixtures/clean/.livingdocs/: manifest.json
tests/fixtures/clean/docs/: architecture.md
tests/fixtures/clean/docs/components/: user-service.md
tests/fixtures/clean/src/: routes.js  user-service.ts
tests/fixtures/drifted/: livingdocs.config.json
tests/fixtures/drifted/.livingdocs/: manifest.json
tests/fixtures/drifted/docs/: architecture.md
tests/fixtures/drifted/src/: routes.js  user-service.ts
(+1 files in other folders)
